# ai-moxcms

./: Cargo.toml  README.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/benches/icc/: main.rs
app/benches/lut/: main.rs
app/src/: encode_gray_lut.rs  main.rs
fuzz/: Cargo.toml
fuzz/lut/: lut.rs
fuzz/safe_read/: safe_read.rs
fuzz/safe_read_create/: safe_read_create.rs
fuzz/unsafe/: unsafe.rs
src/: cicp.rs  dat.rs  defaults.rs  err.rs  gamma.rs  helpers.rs  jzazbz.rs  jzczhz.rs  lab.rs  lib.rs  luv.rs  matrix.rs  mlaf.rs  nd_array.rs  oklab.rs  oklch.rs  profile.rs  reader.rs  rgb.rs  safe_math.rs  transform.rs  trc.rs  writer.rs
src/conversions/: gray2rgb.rs  gray2rgb_extended.rs  interpolator.rs  lut3x3.rs  lut3x4.rs  lut4.rs  lut_transforms.rs  mab.rs  mab4x3.rs  mba3x4.rs  md_lut.rs  md_luts_factory.rs  prelude_lut_xyz_rgb.rs  reduction.rs  rgb2gray.rs  rgb2gray_extended.rs  rgb_xyz_factory.rs  rgbxyz.rs  rgbxyz_fixed.rs  rgbxyz_float.rs  transform_lut3_to_3.rs  transform_lut3_to_4.rs  transform_lut4_to_3.rs
src/conversions/avx/: interpolator.rs  interpolator_q0_15.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q2_13_opt.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs
src/conversions/avx512/: rgb_xyz_opt.rs  rgb_xyz_q2_13_opt.rs
src/conversions/katana/: finalizers.rs  md3x3.rs  md4x3.rs  md_3xn.rs  md_nx3.rs  md_pipeline.rs  pcs_stages.rs  rgb_xyz.rs  stages.rs  xyz_lab.rs  xyz_rgb.rs
src/conversions/neon/: interpolator.rs  interpolator_q0_15.rs  (+8 more)
src/interceptors/: cmyka.rs
src/matan/: curve_shape.rs  slope_limit.rs
(+9 files in other folders)
