[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ai-moxcms]
path = ".."
features = ["options", "in_place"]

[features]
default = ["ai-moxcms/options", "ai-moxcms/in_place"]
avx = ["ai-moxcms/avx_luts", "ai-moxcms/avx_shaper_fixed_point_paths", "ai-moxcms/avx_shaper_optimized_paths", "ai-moxcms/avx_shaper_paths", "ai-moxcms/in_place"]
sse = ["ai-moxcms/sse_luts", "ai-moxcms/sse_shaper_fixed_point_paths", "ai-moxcms/sse_shaper_optimized_paths", "ai-moxcms/sse_shaper_paths", "ai-moxcms/in_place"]
neon = ["ai-moxcms/neon_luts", "ai-moxcms/neon_shaper_fixed_point_paths", "ai-moxcms/neon_shaper_optimized_paths", "ai-moxcms/neon_shaper_paths", "ai-moxcms/in_place"]

[[bin]]
name = "unsafe"
path = "unsafe/unsafe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safe_read"
path = "safe_read/safe_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lut"
path = "lut/lut.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safe_read_create"
path = "safe_read_create/safe_read_create.rs"
test = false
doc = false
bench = false